1. rename TermCommand 2. add StopCmdProcessor